@@ -1,3 +1,9 @@
+Fri Jul 18 12:57:36 2003  George Lebl <jirka@5z.com>
+
+	* art_render_gradient.c: Fix more comparison-of-doubles by == bugs,
+	  this code is uber ugly.  Should fix the fairly random crashes
+	  on asserts I've been having.
+
 2003-07-11  Michael Meeks  <michael@ximian.com>
 
 	* Version 2.3.13
